    65- problems with gequal(t_SER or t_POL with inexact coefs or constant
        wrt. some variables). E.g. S=x+O(x^2);T=S+O(y); S == T -> 0 [#2188]
    66- mfkohnenbijection failure [#2211]
MW  67- mateigen would sometime return eigenvalues instead of eigenvectors
AE  68- [libpari] FpX_oneroot_split could fail for deg 2 and 3.
BA  69- [pthread] Fix potential crashes when cancelling threads.

  Changed
     1- [libpari] rename rootsof1 -> nfrootsof1
     2- [libpari] rename isirreducible -> polisirreducible
     3- hyperellpadicfrobenius: allow X defined over a number field and
        compute Frobenius over unramified extension of Q_p
     4- matsnf(integral matrix): use modular algorithm
     5- rnf structure now contains the list of relative ramified primes
     6- use the documented semantic for Euclidean division involving real t_QUAD
        e.g. x % y is x - floor(x/y)*y; for a t_QUAD x and t_INT y, we used
        to mod out y in "real" and "imaginary" part independently.
     7- [libpari] rename rootpadic -> polrootspadic
     8- polrootspadic: allow computing roots in unramified extension of Q_p
     9- definition of lfunhardy for non-self-dual functions: remove
        rootnumber, which is not well defined since it depends on the choice
        of dual sequence a^*(n)
    10- improved RgXn_powu / RgXn_powu_i for large valuations
    11- improved ZM_ker for wide rectangular matrices
    12- lfun(t_INT D): allow arbitrary non-0 D encoding the attached
        primitive character coredisc(D) (as for other character formats)
    13- exp(small rational number): use binary splitting
    14- parsum: removed optional argument [allows grouping of subsums => faster]
BA  15- old gen_ZpM_Dixon renamed to gen_ZpM_Dixon_Wiedemann,
        new gen_ZpM_Dixon with simpler interface
    16- better formula for Catalan
BA  17- QXQ_div_ratlift renamed to QXQ_div
    18- disallow mfeisenstein(k,chi1,chi2) when Q(chi1 chi2) is not its field
        of definition