@@ -42,6 +42,7 @@ derivnum(x=t,1/(x^2+1),2)
 derivnum(x=1/t,1/(x^2+1),2)
 derivnum(x=0,exp(sin(x)),16)
 round( derivnum(x=0,exp(sin(x)),[0..13]) )
+derivnum(t=0,1,[]) \\ #2216
 derivnum(t=x^2,exp(t),4)
 derivnum(t=x^2+O(x^20),exp(t),4)
 derivnum(z=0,0,0)
@@ -52,6 +53,7 @@ deriv(2/(4*x^2+1),x)
 \\ ERORS
 derivnum(z=0,0,[0,-1])
 derivnum(z=0,0,[1,-1])
+derivnum(z=0,0,x)
 derivn(cos,-1)
 derivn(cos,1,'x)
 sin'("")
